# RAG-Knowledge-Assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  railway.toml  requirements.txt
backend/: __init__.py
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  chat.py  documents.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  chat_service.py  document_processor.py  embedding_service.py  llm_service.py  retriever.py  vector_store.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_document_processor.py  test_exceptions.py  test_retriever.py  test_schemas.py  test_vector_store.py
chroma_data/: chroma.sqlite3
frontend/: __init__.py  app.py
